# ya_afisha

./: .gitignore  LICENSE  README.md  pyproject.toml
where_to_go/places/: admin.py  models.py  urls.py  views.py
where_to_go/places/management/commands/: load_data_json.py  load_raw_json.py
where_to_go/places/migrations/: 0001_initial.py  0002_rename_сoordinates_lat_place_coordinates_lat_and_more.py  0003_alter_image_place.py  0004_alter_image_options_alter_image_order_and_more.py  0005_alter_place_description_long.py  0006_alter_place_description_short.py  0007_rename_coordinates_lat_place_lat_and_more.py
where_to_go/templates/: index.html
where_to_go/where_to_go/: settings.py  urls.py  views.py
