[tool.poetry]
name = "ya-afisha"
version = "0.1.0"
description = ""
authors = ["Sangdak <82779027+Sangdak@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ya_afisha"}]

[tool.poetry.dependencies]
python = "3.10.11"
django = "^4.2.3"
pillow = "^10.0.0"
django-admin-sortable2 = "^2.1.8"
django-tinymce = "^3.6.1"
environs = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
